# r402

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker.yml  rust-publish.yml
r402/: Cargo.toml
r402-evm/: Cargo.toml
r402-evm/src/: chain.rs  lib.rs  networks.rs  provider.rs
r402-evm/src/chain/: config.rs  mod.rs  nonce.rs  pending_nonce_manager.rs  provider.rs  types.rs
r402-evm/src/exact/: client.rs  facilitator.rs  mod.rs  server.rs  types.rs
r402-evm/src/exact/facilitator/: contract.rs  error.rs  mod.rs  settle.rs  signature.rs  verify.rs
r402-evm/src/v1_eip155_exact/: client.rs  facilitator.rs  mod.rs  server.rs  types.rs
r402-evm/src/v2_eip155_exact/: client.rs  facilitator.rs  mod.rs  server.rs  types.rs
r402-facilitator/: Cargo.toml  config.example.toml
r402-facilitator/src/: chain.rs  config.rs  error.rs  handlers.rs  lib.rs  local.rs  main.rs  run.rs  schemes.rs
r402-facilitator/src/util/: mod.rs  sig_down.rs  telemetry.rs
r402-http/: Cargo.toml
r402-http/src/: client.rs  constants.rs  error.rs  facilitator.rs  headers.rs  lib.rs  paygate.rs  server.rs  types.rs
r402-http/src/client/: builder.rs  client.rs  hooks.rs  middleware.rs  mod.rs
r402-http/src/server/: error.rs  facilitator.rs  facilitator_client.rs  hooks.rs  layer.rs  mod.rs  paygate.rs  price_source.rs  pricing.rs  protocol.rs
r402-mcp/: Cargo.toml  README.md
r402-mcp/src/: client.rs  error.rs  extract.rs  lib.rs  rmcp_compat.rs  server.rs  types.rs
r402-proto/: Cargo.toml
r402-proto/src/: helpers.rs  lib.rs  responses.rs  v1.rs  v2.rs
r402-svm/: Cargo.toml
r402-svm/src/: lib.rs  networks.rs
r402-svm/src/chain/: config.rs  mod.rs  provider.rs  rpc.rs  types.rs
r402-svm/src/exact/: client.rs  error.rs  facilitator.rs  mod.rs  server.rs  types.rs
r402-svm/src/exact/facilitator/: config.rs  mod.rs  verify.rs
r402-svm/src/v1_solana_exact/: client.rs  facilitator.rs  mod.rs  server.rs  types.rs
r402-svm/src/v2_solana_exact/: client.rs  facilitator.rs  mod.rs  server.rs  types.rs
r402/src/: amount.rs  chain.rs  client.rs  config.rs  encoding.rs  error.rs  facilitator.rs  helper.rs  hooks.rs  lib.rs  lit_str.rs  networks.rs  scheme.rs  server.rs  timestamp.rs
r402/src/chain/: chain_id.rs  mod.rs
r402/src/proto/: encoding.rs  error.rs  helpers.rs  mod.rs  responses.rs  timestamp.rs  util.rs  v1.rs  v2.rs  version.rs
r402/src/scheme/: client.rs  handler.rs  hooks.rs  mod.rs  registry.rs  server.rs
r402/src/util/: b64.rs  lit_str.rs  money_amount.rs
