[workspace]
members = ["r402", "r402-evm", "r402-http", "r402-svm"]
default-members = ["r402"]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qntx/r402"
description = "x402 Payment Protocol SDK for Rust."

[workspace.dependencies]
# Internal crates
r402 = { version = "0.6", path = "r402" }
r402-evm = { version = "0.6", path = "r402-evm" }
r402-http = { version = "0.6", path = "r402-http" }
r402-svm = { version = "0.6", path = "r402-svm" }

# Core
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_with = "3"
thiserror = "2"

# Runtime
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# Web
axum-core = "0.5"
http = "1.4"
reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = "0.5"
tower = "0.5"
url = { version = "2", features = ["serde"] }

# Utility
base64 = "0.22"
bincode = "1"
bs58 = "0.5"
dashmap = "6"
rand = "0.10"
regex = "1"
rust_decimal = "1"
wiremock = "0.6"

# Alloy (EVM)
alloy-contract = "1.4"
alloy-network = "1.4"
alloy-primitives = { version = "1.4", features = ["k256", "serde"] }
alloy-provider = "1.4"
alloy-rpc-client = "1.4"
alloy-rpc-types-eth = "1.4"
alloy-signer = "1.4"
alloy-signer-local = "1.4"
alloy-sol-types = "1.4"
alloy-transport = { version = "1.4", features = ["throttle"] }
alloy-transport-http = "1.4"

# Solana (SVM)
solana-account = "3"
solana-client = "3"
solana-commitment-config = "3"
solana-compute-budget-interface = "3"
solana-keypair = "3"
solana-message = "3"
solana-pubkey = "4"
solana-signature = "3"
solana-signer = "3"
solana-transaction = "3"
spl-token = { version = "9", features = ["no-entrypoint"] }
spl-token-2022 = { version = "10", features = ["no-entrypoint"] }

# Telemetry
tracing = "0.1"
tracing-core = "0.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
variant_size_differences = "warn"
unsafe_code = "warn"
unused_qualifications = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unused_imports = "warn"
unused_macro_rules = "warn"
non_ascii_idents = "warn"
non_camel_case_types = "warn"
non_snake_case = "warn"
non_upper_case_globals = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
panic = "warn"
unwrap_used = "warn"
unwrap_in_result = "warn"
expect_used = "allow"
panic_in_result_fn = "warn"
indexing_slicing = "allow"
fallible_impl_from = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
doc_markdown = "warn"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
must_use_candidate = "warn"
return_self_not_must_use = "warn"
fn_params_excessive_bools = "warn"
struct_excessive_bools = "allow"
cognitive_complexity = "warn"
too_many_lines = "allow"
excessive_nesting = "allow"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
large_types_passed_by_value = "warn"
implicit_hasher = "warn"
cast_precision_loss = "allow"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"
future_not_send = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
option_if_let_else = "warn"
wildcard_enum_match_arm = "allow"
match_wildcard_for_single_variants = "warn"
match_same_arms = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
significant_drop_tightening = "allow"
used_underscore_binding = "warn"
mem_forget = "warn"
