[package]
name = "r402-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "EVM chain support for the x402 payment protocol."
categories = [
    "cryptography::cryptocurrencies",
    "finance",
    "network-programming",
]
keywords = ["blockchain", "payments", "x402", "evm", "eip-3009"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
client = ["dep:alloy-signer", "dep:alloy-signer-local", "dep:getrandom"]
facilitator = [
    "dep:alloy-provider",
    "dep:alloy-network",
    "dep:alloy-transport",
    "dep:alloy-contract",
    "dep:alloy-rpc-types-eth",
]
tracing = ["dep:tracing"]

[dependencies]
alloy-contract = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-signer = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
r402 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[lints]
workspace = true
