[package]
name = "r402-facilitator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local x402 Facilitator server."
categories = [
    "cryptography::cryptocurrencies",
    "finance",
    "web-programming::http-server",
]
keywords = ["blockchain", "payments", "x402", "facilitator", "server"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
axum = { workspace = true }
http = { workspace = true }
r402 = { workspace = true }
r402-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[lints]
workspace = true
