[package]
name = "r402-facilitator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local x402 Facilitator server."
categories = [
    "cryptography::cryptocurrencies",
    "finance",
    "web-programming::http-server",
]
keywords = ["blockchain", "payments", "x402", "facilitator", "server"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "facilitator"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = []
bin = [
    "dep:r402-evm",
    "dep:alloy-network",
    "dep:alloy-provider",
    "dep:alloy-rpc-client",
    "dep:alloy-signer-local",
    "dep:alloy-transport-http",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "r402-evm/facilitator",
]
tracing = ["dep:tracing"]

[dependencies]
axum = { workspace = true }
http = { workspace = true }
r402 = { workspace = true }
r402-evm = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }
alloy-provider = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
alloy-rpc-client = { workspace = true, optional = true }
alloy-transport-http = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[lints]
workspace = true
