[package]
name = "r402-facilitator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Production-ready x402 facilitator server binary."
publish = false

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "r402-facilitator"
path = "src/main.rs"

[features]
default = ["telemetry", "chain-eip155", "chain-solana"]
chain-eip155 = ["dep:r402-evm"]
chain-solana = ["dep:r402-svm"]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-stdout",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
    "r402/telemetry",
    "r402-evm?/telemetry",
    "r402-svm?/telemetry",
]
full = ["telemetry", "chain-eip155", "chain-solana"]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
r402 = { workspace = true, features = ["cli"] }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }
tower-http = { workspace = true }

opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }
r402-evm = { workspace = true, features = ["facilitator"], optional = true }
r402-svm = { workspace = true, features = ["facilitator"], optional = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[lints]
workspace = true
