[package]
name = "r402-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP transport layer for the x402 payment protocol."
categories = [
    "cryptography::cryptocurrencies",
    "finance",
    "web-programming::http-server",
    "web-programming::http-client",
]
keywords = ["blockchain", "payments", "x402", "http", "middleware"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
client = ["dep:reqwest", "dep:reqwest-middleware", "dep:url", "dep:tokio"]
server = ["dep:axum", "dep:axum-core", "dep:tower"]
tracing = ["dep:tracing"]

[dependencies]
axum = { workspace = true, optional = true }
axum-core = { workspace = true, optional = true }
base64 = { workspace = true }
http = { workspace = true }
r402 = { workspace = true }
r402-proto = { workspace = true }
reqwest = { workspace = true, optional = true }
reqwest-middleware = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[lints]
workspace = true
