[package]
name = "r402-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) integration for the x402 payment protocol."

[dependencies]
r402 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Optional — library features
rmcp = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
rmcp = ["dep:rmcp"]
telemetry = ["dep:tracing"]

[lints]
workspace = true
