[package]
name = "r402-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire format types for the x402 payment protocol."
categories = [
    "cryptography::cryptocurrencies",
    "finance",
    "network-programming",
]
keywords = ["blockchain", "payments", "x402", "protocol", "types"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
