[package]
name = "r402"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for the x402 payment protocol."

[package.metadata.docs.rs]
all-features = true

[features]
default = []
telemetry = ["dep:tracing"]
full = ["telemetry"]

[dependencies]
alloy-primitives = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[lints]
workspace = true
